--- a/app/src/main/res/layout/ashan_activity_chat_main.xml
+++ b/app/src/main/res/layout/ashan_activity_chat_main.xml
@@ -4,6 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.chat.ChatMainActivity">
+    tools:context=".ui.chat.AboutUsMainActivity">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
