--- a/app/src/main/res/layout/manuka_activity_splash_main_app.xml
+++ b/app/src/main/res/layout/manuka_activity_splash_main_app.xml
@@ -25,13 +25,14 @@
             <ImageView
                 android:layout_width="@dimen/_40sdp"
                 android:layout_height="@dimen/_40sdp"
-                android:background="@drawable/icon_logo_notification"
+                android:background="@drawable/rlogo"
+                android:backgroundTint="@color/colorWhite"
                 android:contentDescription="@string/image" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="4dp"
+                android:layout_marginLeft="@dimen/_8sdp"
                 android:orientation="vertical">
 
                 <TextView
@@ -50,7 +51,7 @@
                     android:fontFamily="serif"
                     android:text="@string/slogan"
                     android:textColor="@color/colorWhite"
-                    android:textSize="@dimen/_12sdp"
+                    android:textSize="@dimen/_10sdp"
                     android:textStyle="bold" />
 
             </LinearLayout>
