--- a/app/src/main/res/layout/toolbar_home.xml
+++ b/app/src/main/res/layout/toolbar_home.xml
@@ -17,7 +17,8 @@
         <ImageView
             android:layout_width="@dimen/_20sdp"
             android:layout_height="@dimen/_20sdp"
-            android:background="@drawable/pngwing"
+            android:background="@drawable/rlogo"
+            android:backgroundTint="@color/colorWhite"
             android:contentDescription="@string/image" />
 
         <TextView
