--- a/app/src/main/res/layout/manuka_promotions_payment_user_details.xml
+++ b/app/src/main/res/layout/manuka_promotions_payment_user_details.xml
@@ -21,7 +21,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Make sure that you enter your valid email and phone number bellow, this important to verify your payment."
+        android:text="Make sure that you enter your valid email and phone number bellow, this is required to verify your payment."
         android:textSize="@dimen/_12sdp" />
 
     <View
@@ -113,7 +113,7 @@
             android:layout_gravity="center_vertical"
             android:layout_marginStart="@dimen/_4sdp"
             android:fontFamily="serif"
-            android:text="@string/orderItemPaymentInfo"
+            android:text="@string/secureCheckoutPaymentInfo"
             android:textAllCaps="false"
             android:textSize="@dimen/_10sdp"
             android:textStyle="italic" />
